--- a/My_First_Custom_Sentinel_Notebook/my-first-sentinel-ntbk.ipynb
+++ b/My_First_Custom_Sentinel_Notebook/my-first-sentinel-ntbk.ipynb
@@ -587,6 +587,8 @@
       "source": [
         "# User Input\n",
         "azml_compute='vm-sentinel-ml01'"
+        "azml_compute='vm-sentinel-ml01'"
+        "kqlmagic_azml_compute='https://' + azml_compute + '.eastus.instances.azureml.ms'
       ],
       "outputs": [],
       "execution_count": null,
