--- a/My_First_Custom_Sentinel_Notebook/my-first-sentinel-ntbk.ipynb
+++ b/My_First_Custom_Sentinel_Notebook/my-first-sentinel-ntbk.ipynb
@@ -967,7 +967,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 91,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -991,7 +991,7 @@
     }
    ],
    "source": [
-    "#!pip install Kqlmagic --no-cache-dir --upgrade\n",
+    "!pip install Kqlmagic --no-cache-dir --upgrade\n",
     "%env KQLMAGIC_AZUREML_COMPUTE=\"$kqlmagic_azml_compute\"\n",
     "%env KQLMAGIC_CONFIGURATION=\"show_init_banner=False\"\n",
     "%reload_ext Kqlmagic"
