--- a/My_First_Custom_Sentinel_Notebook/my-first-sentinel-ntbk.ipynb
+++ b/My_First_Custom_Sentinel_Notebook/my-first-sentinel-ntbk.ipynb
@@ -3,7 +3,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Azure Sentinel Notebooks -Introduction to Sentinel Code Snippets\r\n",
+        "# Code Snippets sample notebook\r\n",
         "\r\n",
         "Azure Sentinel Notebook enables Security Analysts to leverage Azure Notebooks to excute code and kql driven analysis. Notebooks are built to reflect most of the Open Source Jupyter Notebook capabilities.  \r\n",
         "The Jupyter Notebook (formerly IPython Notebooks) is defined by Wikipedia as an Open Source web-based interactive computational environment for creating notebook documents. It can be classified as a programming tool.  \r\n",
