--- a/My_First_Custom_Sentinel_Notebook/my-first-sentinel-ntbk.ipynb
+++ b/My_First_Custom_Sentinel_Notebook/my-first-sentinel-ntbk.ipynb
@@ -177,7 +177,7 @@
       "execution_count": null,
       "metadata": {
         "gather": {
-          "logged": 1632289191644
+          "logged": 1633033696164
         }
       }
     },
@@ -203,6 +203,7 @@
         "# MSTICPy - Set up msticpyconfig.yaml #\n",
         "#####################################################\n",
         "from msticpy.config import MpConfigEdit\n",
+        "from pathlib import Path\n",
         "import os\n",
         "mp_conf = \"msticpyconfig.yaml\"\n",
         "# check if MSTICPYCONFIG is already an env variable\n",
@@ -223,7 +224,7 @@
       "metadata": {
         "collapsed": false,
         "gather": {
-          "logged": 1632702946528
+          "logged": 1633033777407
         },
         "jupyter": {
           "outputs_hidden": false,
@@ -263,7 +264,7 @@
       "metadata": {
         "collapsed": false,
         "gather": {
-          "logged": 1632702961558
+          "logged": 1633034246327
         },
         "jupyter": {
           "outputs_hidden": false,
@@ -306,7 +307,7 @@
       "metadata": {
         "collapsed": false,
         "gather": {
-          "logged": 1632085571889
+          "logged": 1633034413451
         },
         "jupyter": {
           "outputs_hidden": false,
@@ -349,7 +350,7 @@
       "metadata": {
         "collapsed": false,
         "gather": {
-          "logged": 1632085605418
+          "logged": 1633034738213
         },
         "jupyter": {
           "outputs_hidden": false,
@@ -426,11 +427,11 @@
         "tenant_id, subscription_id, resource_group, workspace_id, workspace_name, user_alias, user_object_id = read_config_values('config.json')"
       ],
       "outputs": [],
-      "execution_count": null,
+      "execution_count": 13,
       "metadata": {
         "collapsed": false,
         "gather": {
-          "logged": 1632430444232
+          "logged": 1633034968735
         },
         "jupyter": {
           "outputs_hidden": false,
@@ -495,7 +496,7 @@
       "metadata": {
         "collapsed": false,
         "gather": {
-          "logged": 1631632821061
+          "logged": 1633035154601
         },
         "jupyter": {
           "outputs_hidden": false,
@@ -525,7 +526,7 @@
     {
       "cell_type": "code",
       "source": [
-        "query = 'Event | take 10 | where TimeGenerated >=ago(24h)'\n",
+        "query = 'Event | take 10 | where TimeGenerated >=ago(90d)'\n",
         "result = la_data_client.query(workspace_id, QueryBody(query=query))\n",
         "print(result.as_dict())\n"
       ],
@@ -534,7 +535,7 @@
       "metadata": {
         "collapsed": false,
         "gather": {
-          "logged": 1631633813029
+          "logged": 1633035249584
         },
         "jupyter": {
           "outputs_hidden": false,
@@ -588,15 +589,15 @@
       "cell_type": "code",
       "source": [
         "# User Input\n",
-        "azml_compute='vm-sentinel-ml01'\n",
+        "azml_compute='gacompute01'\n",
         "kqlmagic_azml_compute='https://' + azml_compute + '.eastus.instances.azureml.ms'"
       ],
       "outputs": [],
-      "execution_count": null,
+      "execution_count": 76,
       "metadata": {
         "collapsed": false,
         "gather": {
-          "logged": 1632658516704
+          "logged": 1633037689087
         },
         "jupyter": {
           "outputs_hidden": false,
@@ -629,6 +630,9 @@
           "transient": {
             "deleting": false
           }
+        },
+        "gather": {
+          "logged": 1633037692146
         }
       }
     },
@@ -676,11 +680,11 @@
         "workspace_id = read_config_values('config.json')"
       ],
       "outputs": [],
-      "execution_count": null,
+      "execution_count": 78,
       "metadata": {
         "collapsed": false,
         "gather": {
-          "logged": 1632213790283
+          "logged": 1633037729391
         },
         "jupyter": {
           "outputs_hidden": false,
@@ -742,10 +746,7 @@
     {
       "cell_type": "code",
       "source": [
-        "%%kql\n",
-        "Event\n",
-        "| take 1\n",
-        "| where TimeGenerated >=ago(30d)"
+        "%kql Event | take 1 | where TimeGenerated >=ago(90d)"
       ],
       "outputs": [],
       "execution_count": null,
@@ -775,7 +776,29 @@
     {
       "cell_type": "code",
       "source": [
-        "df = _.to_dataframe()\n",
+        "_"
+      ],
+      "outputs": [],
+      "execution_count": null,
+      "metadata": {
+        "jupyter": {
+          "source_hidden": false,
+          "outputs_hidden": false
+        },
+        "nteract": {
+          "transient": {
+            "deleting": false
+          }
+        },
+        "gather": {
+          "logged": 1633037833567
+        }
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df = _kql_raw_result_\n",
         "df"
       ],
       "outputs": [],
@@ -783,204 +806,7 @@
       "metadata": {
         "collapsed": false,
         "gather": {
-          "logged": 1632215324075
-        },
-        "jupyter": {
-          "outputs_hidden": false,
-          "source_hidden": false
-        },
-        "nteract": {
-          "transient": {
-            "deleting": false
-          }
-        }
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "### Present query output using the data frame df"
-      ],
-      "metadata": {
-        "nteract": {
-          "transient": {
-            "deleting": false
-          }
-        }
-      }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "df"
-      ],
-      "outputs": [],
-      "execution_count": null,
-      "metadata": {
-        "collapsed": false,
-        "gather": {
-          "logged": 1632215393957
-        },
-        "jupyter": {
-          "outputs_hidden": false,
-          "source_hidden": false
-        },
-        "nteract": {
-          "transient": {
-            "deleting": false
-          }
-        }
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "### Show results in different forms"
-      ],
-      "metadata": {
-        "nteract": {
-          "transient": {
-            "deleting": false
-          }
-        }
-      }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "df.head()"
-      ],
-      "outputs": [],
-      "execution_count": null,
-      "metadata": {
-        "collapsed": false,
-        "gather": {
-          "logged": 1632215348260
-        },
-        "jupyter": {
-          "outputs_hidden": false,
-          "source_hidden": false
-        },
-        "nteract": {
-          "transient": {
-            "deleting": false
-          }
-        }
-      }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "df.min()"
-      ],
-      "outputs": [],
-      "execution_count": null,
-      "metadata": {
-        "collapsed": false,
-        "gather": {
-          "logged": 1632215351616
-        },
-        "jupyter": {
-          "outputs_hidden": false,
-          "source_hidden": false
-        },
-        "nteract": {
-          "transient": {
-            "deleting": false
-          }
-        }
-      }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "df.to_json()"
-      ],
-      "outputs": [],
-      "execution_count": null,
-      "metadata": {
-        "collapsed": false,
-        "gather": {
-          "logged": 1632215354139
-        },
-        "jupyter": {
-          "outputs_hidden": false,
-          "source_hidden": false
-        },
-        "nteract": {
-          "transient": {
-            "deleting": false
-          }
-        }
-      }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "df.columns"
-      ],
-      "outputs": [],
-      "execution_count": null,
-      "metadata": {
-        "collapsed": false,
-        "gather": {
-          "logged": 1632215360487
-        },
-        "jupyter": {
-          "outputs_hidden": false,
-          "source_hidden": false
-        },
-        "nteract": {
-          "transient": {
-            "deleting": false
-          }
-        }
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "### Excution of another cell overrides \\_ variable.  \n",
-        "Use\\_kql\\_raw\\_result\\_ python variable holds last kql query result.  \n",
-        "If you run the previous cell you'll get an error since the \\_ is now overrided\n"
-      ],
-      "metadata": {
-        "nteract": {
-          "transient": {
-            "deleting": false
-          }
-        }
-      }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "df = _kql_raw_result_"
-      ],
-      "outputs": [],
-      "execution_count": null,
-      "metadata": {
-        "gather": {
-          "logged": 1632215511665
-        },
-        "nteract": {
-          "transient": {
-            "deleting": false
-          }
-        }
-      }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "df"
-      ],
-      "outputs": [],
-      "execution_count": null,
-      "metadata": {
-        "collapsed": false,
-        "gather": {
-          "logged": 1632215538019
+          "logged": 1633037856764
         },
         "jupyter": {
           "outputs_hidden": false,
@@ -1017,7 +843,7 @@
       "metadata": {
         "collapsed": false,
         "gather": {
-          "logged": 1632218129998
+          "logged": 1633037925168
         },
         "jupyter": {
           "outputs_hidden": false,
@@ -1039,7 +865,7 @@
       "execution_count": null,
       "metadata": {
         "gather": {
-          "logged": 1632218198138
+          "logged": 1633037946368
         },
         "nteract": {
           "transient": {
